--- a/CalculatorLab1-2/.settings/org.eclipse.wst.common.component
+++ b/CalculatorLab1-2/.settings/org.eclipse.wst.common.component
@@ -2,6 +2,7 @@
     <wb-module deploy-name="CalculatorLab1-2">
         <wb-resource deploy-path="/" source-path="/WebContent" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/resources"/>
         <property name="context-root" value="CalculatorLab1-2"/>
         <property name="java-output-path" value="/CalculatorLab1-2/build/classes"/>
     </wb-module>
